--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,18 @@ body {
   height: 494px;
 }
 
+.hulk-ryu {
+  float: right;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+  padding-left: 100px;
+  -webkit-filter:hue-rotate(90deg);
+}
+
 .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
